--- a/glucose.html
+++ b/glucose.html
@@ -6,24 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculate Glucose</title>
     <link rel="stylesheet" href="styles.css"/>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
+
+    <div id="nav-placeholder"></div>
+    <script>
+    $(function(){
+      $("#nav-placeholder").load("navigation.html");
+    });
+    </script>
+
     <div class="calculate">
+
        <div class="glucose">
         <label for="gvalue">Enter Glucose value</label>
            <input type="text" name="gvalue" id="gvalue">
-           
            <input type="button" id="btn1" value="Know my range">
        </div>
 
-       <div class="bmi">
-           <label for="bmi">Enter Height</label>
-           <input type="text" name="height" id="height">
-           <label for="bmi">Enter Weight</label>
-           <input type="text" name="weight" id="weight">
-           <input type="button" id="btn2" value="Know my BMI">
-       </div>
+       <div class="sweat">
+        <label for="sweatvalue">Enter Conductivity of Sweat</label>
+           <input type="text" name="sweatvalue" id="sweatvalue">
+           <input type="button" id="btn2" value="Get Glucose Level">
+           <input type="button" id="btn3" value="Get Glucose Range">
 
+       </div>
+      
     </div>
 </body>
 </html>
