--- a/bmi.html
+++ b/bmi.html
@@ -7,6 +7,14 @@
     <title>BMI calculator</title>
     <link rel="stylesheet" href="styles.css"/>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <style>
+        body{
+          background-image: url(https://bit.ly/3w3b6rH);
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+      </style>
 </head>
 <body>
 
