--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <style>
+      body{
+        background-image: url(https://bit.ly/3w3b6rH);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style>
 </head>
 <body>
     <div id="nav-placeholder"></div>
