--- a/navigation.html
+++ b/navigation.html
@@ -9,7 +9,7 @@
                   <ul class="dropmenu">
                     <li><a href="glucose.html">Glucose </a></li>
                     <li><a href="bmi.html">BMI</a></li>
-                    <li><a href="#">Pills</a></li>
+                    <li><a href="pills.html">Pills</a></li>
                   </ul>
                </li>
  
